# ShanHaiEdu-kejian-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CURRENT_STATUS.md  README.md  REPOSITORY_MANIFEST.sha256  alembic.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.contracts.json
.github/: CODEOWNERS  pull_request_template.md
alembic/: env.py
apps/: __init__.py
contracts/: README.md  api-conventions.md  api-surface.openapi.yaml  artifact-stale-reason.schema.json  builtin-generation-source.schema.json  content-definition.schema.json  content-item.schema.json  content-package-manifest.schema.json  creation-lifecycle-event.schema.json  creation-package.schema.json  delivery-slice.schema.json  development-leases.json  development-leases.schema.json  error-envelope.schema.json  full-chain-freeze.json  full-chain-freeze.schema.json  generation-template.schema.json  golden-courseware-case.schema.json  input-definition.schema.json  intro-option-set.schema.json  markdown-template-compilation-profile.schema.json  markdown-template-draft.schema.json  material-evidence-package.schema.json  mock-scenarios.json  mock-scenarios.schema.json  openapi-breaking-transitions.json  page-api-fact-matrix.json  page-api-fact-matrix.schema.json  planned-api-surface.openapi.yaml  ppt-page-spec.schema.json  projection-template.schema.json  prompt-template.schema.json  sse-event.schema.json  style-preset.schema.json  video-shot.schema.json  workflow-node-generation-binding.schema.json  workflow-node-status.schema.json
docs/: START_HERE.md
(+1487 files in other folders)
