[project]
name = "shanhaiedu-kejian-system"
version = "0.1.0"
description = "ShanHaiEdu courseware workbench backend platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "certifi>=2025.1.31",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jsonschema[format]>=4.25,<5",
  "minio>=7.2,<8",
  "pypdf>=5.9,<7",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.8,<3",
  "redis>=6,<8",
  "sqlalchemy>=2.0.41,<3",
  "uvicorn[standard]>=0.34,<1",
  "uuid6>=2024.7.10,<2026",
  "dramatiq[redis]>=2.2,<3",
  "markdown-it-py>=3,<5",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pyyaml>=6.0.3,<7",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests requiring real local service dependencies"]

[tool.pyright]
include = ["apps/api", "workers", "workflow"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportUnusedFunction = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "workers", "workflow"]
